# paint-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  fly.toml
src/: main.rs
